# turner

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Jenkinsfile  Makefile  README.md  config.h  deps.mk  main.cpp  pathtracer.cpp  pathtracer.h  radiosity.cpp  radiosity.h  raycaster.cpp  raycaster.h  raytracer.cpp  raytracer.h  renderer.cpp  simple_mms.cpp  test_assimp.cpp  trace.h
lib/: algorithm.h  associative.h  clipping.h  effects.h  film.h  filter.h  functional.h  gauss_seidel.h  geometry.h  hierarchical.h  hierarchical_radiosity.h  image.h  incidence.h  intersection.h  kdtree.cpp  kdtree.h  lambertian.h  matrix.h  mesh.h  monte_carlo.h  output.h  profile.cpp  profile.h  progress_bar.h  radiosity.cpp  radiosity.h  range.h  raster.h  runtime.h  sampling.cpp  sampling.h  solid_angle.h  spectrum.h  spectrum.inl  stats.h  triangle.cpp  triangle.h  turner.h  types.cpp  types.h  (+1 more)
lib/sampler/: stratified.h
scenes/: box.iv  colored_cube.blend  cornell_box.blend  cornell_box_pathtrace_3480_4_128.png.REMOVED.git-id  furnace_test.blend  orthogonal_planes.blend  simple.dae  simple_rotated.blend  simple_rotated.dae  sphere.blend  stanford_dragon.blend.REMOVED.git-id  stanford_dragon.png.REMOVED.git-id
scripts/: build-and-test.sh  collect-coverage.sh  render-samples.sh  sync.sh  upload-and-comment.py
src/: geometry.h  serialize.h  turner.h
tests/: CMakeLists.txt  helper.h  stess_test_kdtree.cpp  stress_test_kdtree.cpp  test_algorithm.cpp  test_associative.cpp  test_clipping.cpp  test_config.cpp  test_effects.cpp  test_film.cpp  test_filter.cpp  test_functional.cpp  test_gauss_seidel.cpp  test_geometry.cpp  test_incidence.cpp  test_intersection.cpp  test_kdtree.cpp  test_lambertian.cpp  test_mesh.cpp  test_progress_bar.cpp  test_radiosity.cpp  test_range.cpp  test_raster.cpp  test_sampler.cpp  test_sampling.cpp  test_solid_angle.cpp  test_spectrum.cpp  test_triangle.cpp  test_triangle_subdivision.cpp  test_types.cpp  tests.mk
